# TStar

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  changelog.txt  fetch_pgc.py  set_version.ps1  setup_python_dist.ps1  setup_python_linux.sh  setup_python_macos.sh
.github/workflows/: debian_build.yml  macos_build.yml
data/: pgc.csv
data/TStar-spcc-database/: SIGHTRON_Comet_BP.json  spcc-database-schema.json
scripts/: OSC_Preprocessing_Drizzle.tss  OSC_Startrail.tss  StarTrails_WithoutDBF.tss
src/: Icons.h  ImageBuffer.cpp  ImageBuffer.h  ImageBufferDelta.cpp  ImageBufferDelta.h  ImageViewer.cpp  ImageViewer.h  Info.plist  MainWindow.cpp  MainWindow.h  MainWindowCallbacks.h  TStar.rc  build_all.bat  build_installer.bat  build_installer_macos.sh  build_linux.sh  build_macos.sh  deploy.bat  i18n.qrc  installer.iss  macos_utils.sh  main.cpp  package_deb.sh  package_dist.bat  package_macos.sh  resources.qrc  utils_common.sh  version.rc.in  windows_utils.bat
src/algos/: AbeMath.cpp  AbeMath.h  ChannelOps.cpp  ChannelOps.h  CosmicClarityRunner.cpp  CosmicClarityRunner.h  CubicSpline.h  Deconvolution.cpp  Deconvolution.h  GHSAlgo.cpp  GHSAlgo.h  GraXpertRunner.cpp  GraXpertRunner.h  ImageBlendingRunner.cpp  ImageBlendingRunner.h  PerfectPaletteRunner.cpp  PerfectPaletteRunner.h  RARRunner.cpp  RARRunner.h  RawEditorProcessor.cpp  RawEditorProcessor.h  SPCC.cpp  SPCC.h  StarNetRunner.cpp  StarNetRunner.h  StarRecompositionRunner.cpp  StarRecompositionRunner.h  StarStretchRunner.cpp  StarStretchRunner.h  StatisticalStretch.cpp  StatisticalStretch.h  TGVDenoise.cpp  TGVDenoise.h
src/astrometry/: AnnotationEngine.cpp  AnnotationEngine.h  AstapSolver.cpp  AstapSolver.h  HiPSClient.cpp  HiPSClient.h  NativePlateSolver.cpp  NativePlateSolver.h  SimbadSearcher.cpp  SimbadSearcher.h  TriangleMatcher.cpp  TriangleMatcher.h  WCSUtils.cpp  WCSUtils.h  WcsSolver.h
src/background/: BackgroundExtraction.cpp  BackgroundExtraction.h  CatalogGradientExtractor.cpp  CatalogGradientExtractor.h
src/calibration/: CalibrationC.c  CalibrationC.h  CalibrationEngine.cpp  CalibrationEngine.h
src/core/: ColorProfileManager.cpp  ColorProfileManager.h  DpiHelper.h  ErrorHandling.cpp  ErrorHandling.h  GlobalExceptionHandler.cpp  GlobalExceptionHandler.h  Logger.cpp  Logger.h  MaskLayer.h  MaskManager.h  ResourceManager.cpp  ResourceManager.h  RobustStatistics.cpp  RobustStatistics.h  SimdOps.cpp  SimdOps.h  SwapManager.cpp  SwapManager.h  TStarApplication.cpp  TStarApplication.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  ThreadState.cpp  ThreadState.h  Version.cpp.in  Version.h
src/dialogs/: ABEDialog.cpp  ABEDialog.h  AberrationInspectorDialog.cpp  AberrationInspectorDialog.h  AboutDialog.cpp  AboutDialog.h  AlignChannelsDialog.cpp  AlignChannelsDialog.h  AnnotationToolDialog.cpp  AnnotationToolDialog.h  ApplyMaskDialog.cpp  ApplyMaskDialog.h  ArcsinhStretchDialog.cpp  ArcsinhStretchDialog.h  AstroSpikeDialog.cpp  AstroSpikeDialog.h  BackgroundNeutralizationDialog.cpp  BackgroundNeutralizationDialog.h  BinningDialog.cpp  BinningDialog.h  BlinkComparatorDialog.cpp  BlinkComparatorDialog.h  CBEDialog.cpp  CBEDialog.h  ChannelCombinationDialog.cpp  ChannelCombinationDialog.h  ClaheDialog.cpp  ClaheDialog.h  ColorProfileDialog.cpp  ColorProfileDialog.h  ContinuumSubtractionDialog.cpp  ContinuumSubtractionDialog.h  ConversionDialog.cpp  ConversionDialog.h  CorrectionBrushDialog.cpp  CorrectionBrushDialog.h  CosmicClarityDialog.cpp  CosmicClarityDialog.h  CropRotateDialog.cpp  CropRotateDialog.h  (+102 more)
src/imaging/: SensorProfile.cpp  SensorProfile.h
src/io/: CompressionUtils.cpp  CompressionUtils.h  FitsHeaderUtils.cpp  FitsHeaderUtils.h  FitsLoader.cpp  FitsLoader.h  FitsLoaderC.c  FitsLoaderC.h  FitsLoaderCWrapper.cpp  FitsLoaderCWrapper.h  FitsWrapper.h  IccProfileExtractor.cpp  IccProfileExtractor.h  RawLoader.cpp  RawLoader.h  SERFile.cpp  SERFile.h  SimpleTiffReader.cpp  SimpleTiffReader.h  SimpleTiffWriter.cpp  SimpleTiffWriter.h  TiffIO.h  XISFReader.cpp  XISFReader.h  XISFWriter.cpp  XISFWriter.h
src/network/: AstapDownloader.cpp  AstapDownloader.h  ModelDownloader.cpp  ModelDownloader.h  UpdateChecker.cpp  UpdateChecker.h
src/photometry/: AperturePhotometry.cpp  AperturePhotometry.h  CatalogClient.cpp  CatalogClient.h  PCCCalibrator.cpp  PCCCalibrator.h  PCCResult.h  PsfFitter.cpp  PsfFitter.h  StarDetector.cpp  StarDetector.h
src/preprocessing/: Debayer.cpp  Debayer.h  MasterFrames.cpp  MasterFrames.h  Preprocessing.cpp  Preprocessing.h  PreprocessingTypes.h  XTransDemosaic.cpp  XTransDemosaic.h
src/scripting/: PythonFinder.cpp  PythonFinder.h  ScriptParser.cpp  ScriptParser.h  ScriptRunner.cpp  ScriptRunner.h  ScriptTypes.h  StackingCommands.cpp  StackingCommands.h  msvc_compat.cpp
src/scripts/: cosmic_bridge.py  graxpert_bridge.py  rar_worker.py  starnet_converter.py
src/stacking/: AnscombeTransform.h  BackgroundExtraction.cpp  BackgroundExtraction.h  Blending.cpp  Blending.h  CosmeticCorrection.cpp  CosmeticCorrection.h  Distortion.cpp  Distortion.h  DrizzleStacking.cpp  DrizzleStacking.h  ImageCache.cpp  ImageCache.h  InlineRejection.h  MathUtils.h  Normalization.cpp  Normalization.h  OverlapNormalization.cpp  OverlapNormalization.h  PixelMath.cpp  PixelMath.h  Registration.cpp  Registration.h  RejectionAlgorithms.cpp  RejectionAlgorithms.h  RejectionMaps.cpp  RejectionMaps.h  SequenceFile.cpp  SequenceFile.h  StackDataBlock.h  StackingEngine.cpp  StackingEngine.h  StackingInterpolation.h  StackingProject.cpp  StackingProject.h  StackingSequence.cpp  StackingSequence.h  StackingTypes.h  Statistics.cpp  Statistics.h  (+2 more)
src/widgets/: AnnotationOverlay.cpp  AnnotationOverlay.h  CustomMdiSubWindow.cpp  CustomMdiSubWindow.h  HeaderPanel.cpp  HeaderPanel.h  HistogramWidget.cpp  HistogramWidget.h  ResourceMonitorWidget.cpp  ResourceMonitorWidget.h  RightSidebarWidget.cpp  RightSidebarWidget.h  SidebarWidget.cpp  SidebarWidget.h  (+4 more)
tools/: trans_data.py
translations/: tstar_de.ts  tstar_es.ts  tstar_fr.ts  tstar_it.ts  tstar_template.ts
(+262 files in other folders)
