# =============================================================================
# TStar - Cross-Platform CMake Build Configuration
# =============================================================================
#
# Supported platforms:
#   - Windows (MinGW-w64)
#   - macOS   (Homebrew, Apple Silicon + Intel)
#
# The build system auto-detects the host platform and resolves dependency
# paths accordingly.  Optional libraries (LibRaw, LZ4, Zstd) are detected
# at configure time; corresponding preprocessor flags are set when found.
#
# =============================================================================

cmake_minimum_required(VERSION 3.16)

# =============================================================================
# Section 1 - Version Management
# =============================================================================
# The single source of truth for the project version is changelog.txt.
# CMake parses the first "Version X.Y.Z" line at configure time so that
# the version string propagates to the binary, Windows resource file, and
# macOS bundle metadata without manual synchronization.
# =============================================================================

set_property(DIRECTORY APPEND PROPERTY
    CMAKE_CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/changelog.txt"
)

if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/changelog.txt")
    file(STRINGS "${CMAKE_CURRENT_LIST_DIR}/changelog.txt"
         VERSION_LINE REGEX "^Version [0-9.]+"
    )
    if(VERSION_LINE)
        list(GET VERSION_LINE 0 FIRST_VERSION_LINE)
        string(REGEX MATCH "[0-9.]+" TSTAR_VERSION "${FIRST_VERSION_LINE}")
    else()
        set(TSTAR_VERSION "1.0.0")
    endif()
else()
    set(TSTAR_VERSION "1.0.0")
endif()

# Decompose semantic version into individual components.
string(REPLACE "." ";" VERSION_LIST ${TSTAR_VERSION})
list(GET VERSION_LIST 0 TSTAR_VERSION_MAJOR)
list(GET VERSION_LIST 1 TSTAR_VERSION_MINOR)
list(GET VERSION_LIST 2 TSTAR_VERSION_PATCH)

if(NOT TSTAR_VERSION_MAJOR)
    set(TSTAR_VERSION_MAJOR 1)
endif()
if(NOT TSTAR_VERSION_MINOR)
    set(TSTAR_VERSION_MINOR 0)
endif()
if(NOT TSTAR_VERSION_PATCH)
    set(TSTAR_VERSION_PATCH 0)
endif()

# Generate the Windows version resource from the .rc.in template.
if(WIN32)
    configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/src/version.rc.in"
        "${CMAKE_CURRENT_BINARY_DIR}/TStar.rc"
        @ONLY
    )
endif()

# Generate Version.cpp so the version string is compiled into a single
# translation unit, avoiding full rebuilds when only the version changes.
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/src/core/Version.cpp.in"
    "${CMAKE_CURRENT_BINARY_DIR}/generated/Version.cpp"
    @ONLY
)

# =============================================================================
# Section 2 - Project Declaration & Language Standards
# =============================================================================

project(TStar LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# =============================================================================
# Section 3 - Compiler Optimizations & Warning Policy
# =============================================================================

if(MSVC)
    # MSVC: treat warnings as errors, full optimization in Release.
    add_compile_options(/W4 /WX)
    add_compile_options($<$<CONFIG:Release>:/O2>)
else()
    # GCC / Clang (MinGW on Windows, Apple Clang on macOS).
    add_compile_options(
        -Wall -Wextra -Wpedantic
        -Wno-missing-field-initializers
    )

    # Optional Link-Time Optimization for Release builds.
    option(ENABLE_LTO "Enable Link-Time Optimization" OFF)
    if(ENABLE_LTO)
        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            add_compile_options($<$<CONFIG:Release>:-flto=auto>)
            add_link_options($<$<CONFIG:Release>:-flto=auto>)
        else()
            add_compile_options($<$<CONFIG:Release>:-flto>)
            add_link_options($<$<CONFIG:Release>:-flto>)
        endif()
        message(STATUS "Link-Time Optimization (LTO) enabled for Release builds")
    endif()

    # Debug: full symbols, no optimization.
    add_compile_options($<$<CONFIG:Debug>:-g>)
    add_compile_options($<$<CONFIG:Debug>:-O0>)

    # Position-independent code is required on some platforms.
    add_compile_options(-fPIC)
endif()

# =============================================================================
# Section 4 - Platform-Specific Settings
# =============================================================================

if(APPLE)
    set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum macOS version")
    set(CMAKE_MACOSX_BUNDLE ON)
    message(STATUS "Building for macOS")
elseif(WIN32)
    # Disable AutoMoc predefs generation to prevent pre-processing
    # failures with MinGW on Windows.
    set(CMAKE_AUTOMOC_COMPILER_PREDEFS OFF CACHE BOOL "" FORCE)
    message(STATUS "Building for Windows")
endif()

# Enable Qt meta-object, resource, and UI compiler integration.
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# =============================================================================
# Section 5 - Homebrew Detection (macOS only)
# =============================================================================
# On macOS the build system queries Homebrew for the installation prefix so
# that all subsequent find_package / find_library calls resolve correctly
# on both Apple Silicon (/opt/homebrew) and Intel (/usr/local) machines.
# =============================================================================

if(APPLE)
    execute_process(
        COMMAND brew --prefix
        OUTPUT_VARIABLE HOMEBREW_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(NOT HOMEBREW_PREFIX)
        if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
            set(HOMEBREW_PREFIX "/opt/homebrew")
        else()
            set(HOMEBREW_PREFIX "/usr/local")
        endif()
    endif()

    message(STATUS "Homebrew prefix: ${HOMEBREW_PREFIX}")

    list(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_PREFIX}")
    list(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_PREFIX}/opt/qt")
    list(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_PREFIX}/opt/qt@6")

    if(NOT Qt6_DIR)
        if(EXISTS "${HOMEBREW_PREFIX}/opt/qt/lib/cmake/Qt6/Qt6Config.cmake")
            set(Qt6_DIR "${HOMEBREW_PREFIX}/opt/qt/lib/cmake/Qt6" CACHE PATH "Path to Qt6")
        elseif(EXISTS "${HOMEBREW_PREFIX}/opt/qtbase/lib/cmake/Qt6/Qt6Config.cmake")
            set(Qt6_DIR "${HOMEBREW_PREFIX}/opt/qtbase/lib/cmake/Qt6" CACHE PATH "Path to Qt6")
        endif()
    endif()
endif()

# =============================================================================
# Section 6 - Required Dependencies
# =============================================================================

# ---- Qt6 ----
find_package(Qt6 REQUIRED COMPONENTS
    Widgets Network Svg Concurrent Xml LinguistTools
)

# ---- OpenMP ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix libomp
        OUTPUT_VARIABLE LIBOMP_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(LIBOMP_PREFIX AND EXISTS "${LIBOMP_PREFIX}")
        message(STATUS "Using Homebrew libomp from: ${LIBOMP_PREFIX}")

        # Create imported targets manually because Apple Clang does not
        # ship with built-in OpenMP support.
        add_library(OpenMP::OpenMP_CXX INTERFACE IMPORTED)
        set_target_properties(OpenMP::OpenMP_CXX PROPERTIES
            INTERFACE_COMPILE_OPTIONS "-Xpreprocessor;-fopenmp"
            INTERFACE_INCLUDE_DIRECTORIES "${LIBOMP_PREFIX}/include"
            INTERFACE_LINK_LIBRARIES "${LIBOMP_PREFIX}/lib/libomp.dylib"
        )

        add_library(OpenMP::OpenMP_C INTERFACE IMPORTED)
        set_target_properties(OpenMP::OpenMP_C PROPERTIES
            INTERFACE_COMPILE_OPTIONS "-Xpreprocessor;-fopenmp"
            INTERFACE_INCLUDE_DIRECTORIES "${LIBOMP_PREFIX}/include"
            INTERFACE_LINK_LIBRARIES "${LIBOMP_PREFIX}/lib/libomp.dylib"
        )
    else()
        find_package(OpenMP)
        if(NOT OpenMP_FOUND)
            message(WARNING "OpenMP not found. Install with: brew install libomp")
        endif()
    endif()
else()
    find_package(OpenMP REQUIRED)
endif()

# ---- GSL (GNU Scientific Library) ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix gsl
        OUTPUT_VARIABLE GSL_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(GSL_PREFIX AND EXISTS "${GSL_PREFIX}")
        set(GSL_INCLUDE_DIRS "${GSL_PREFIX}/include")
        set(GSL_LIBRARY_DIRS "${GSL_PREFIX}/lib")
        set(GSL_LIBRARIES
            "${GSL_PREFIX}/lib/libgsl.dylib"
            "${GSL_PREFIX}/lib/libgslcblas.dylib"
        )
        message(STATUS "Using Homebrew GSL from: ${GSL_PREFIX}")
    else()
        find_package(GSL REQUIRED)
        set(GSL_LIBRARIES GSL::gsl GSL::gslcblas)
    endif()
else()
    # Windows: resolve from local deps/ directory.
    set(GSL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/gsl")
    if(EXISTS "${GSL_DIR}")
        set(GSL_INCLUDE_DIRS "${GSL_DIR}/include")
        set(GSL_LIBRARY_DIRS "${GSL_DIR}/lib")
        set(GSL_LIBRARIES gsl gslcblas)
    else()
        find_package(GSL REQUIRED)
        set(GSL_LIBRARIES GSL::gsl GSL::gslcblas)
    endif()
endif()

# ---- CFITSIO ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix cfitsio
        OUTPUT_VARIABLE CFITSIO_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(CFITSIO_PREFIX AND EXISTS "${CFITSIO_PREFIX}")
        set(CFITSIO_INCLUDE_DIR "${CFITSIO_PREFIX}/include")
        set(CFITSIO_LIBRARY "${CFITSIO_PREFIX}/lib/libcfitsio.dylib")
        message(STATUS "Using Homebrew CFITSIO from: ${CFITSIO_PREFIX}")
    else()
        message(FATAL_ERROR "CFITSIO not found. Install with: brew install cfitsio")
    endif()
else()
    # Windows: static library from local deps/.
    set(CFITSIO_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/cfitsio")
    set(CFITSIO_INCLUDE_DIR "${CFITSIO_DIR}/include")
    set(CFITSIO_LIBRARY "${CFITSIO_DIR}/lib/libcfitsio.a")
endif()

# ---- OpenCV ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix opencv
        OUTPUT_VARIABLE OPENCV_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(OPENCV_PREFIX AND EXISTS "${OPENCV_PREFIX}")
        set(OpenCV_DIR "${OPENCV_PREFIX}/lib/cmake/opencv4")
    endif()

    # Import only the modules TStar actually uses to minimize transitive
    # dependencies (notably avoids the dnn module which pulls in OpenVINO).
    find_package(OpenCV REQUIRED COMPONENTS
        core imgproc imgcodecs photo features2d calib3d
    )
else()
    # Windows: resolve from local deps/.
    set(OpenCV_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/opencv")
    find_package(OpenCV REQUIRED
        PATHS "${CMAKE_CURRENT_SOURCE_DIR}/deps/opencv"
        NO_DEFAULT_PATH
    )
endif()

# =============================================================================
# Section 7 - Optional Dependencies
# =============================================================================
# These libraries extend functionality but are not required for a working
# build.  Preprocessor defines (HAVE_LZ4, HAVE_ZSTD, HAVE_LIBRAW) are set
# when a library is found so that source code can gate features at compile
# time with #ifdef guards.
# =============================================================================

# ---- LZ4 (fast XISF compression) ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix lz4
        OUTPUT_VARIABLE LZ4_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(LZ4_PREFIX AND EXISTS "${LZ4_PREFIX}/include/lz4.h")
        set(LZ4_FOUND TRUE)
        set(LZ4_INCLUDE_DIRS "${LZ4_PREFIX}/include")
        set(LZ4_LIBRARIES "${LZ4_PREFIX}/lib/liblz4.dylib")
        message(STATUS "Using Homebrew LZ4 from: ${LZ4_PREFIX}")
    endif()
else()
    set(LZ4_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/lz4")
    if(EXISTS "${LZ4_DIR}/include/lz4.h")
        message(STATUS "Using local LZ4 from ${LZ4_DIR}")
        set(LZ4_FOUND TRUE)
        set(LZ4_INCLUDE_DIRS "${LZ4_DIR}/include")
        if(EXISTS "${LZ4_DIR}/static/liblz4_static.lib")
            set(LZ4_LIBRARIES "${LZ4_DIR}/static/liblz4_static.lib")
        else()
            set(LZ4_FOUND FALSE)
            message(STATUS "LZ4 static library not found in ${LZ4_DIR}/static")
        endif()
    else()
        set(LZ4_FOUND FALSE)
    endif()
endif()

if(NOT LZ4_FOUND)
    message(STATUS "LZ4 not found - XISF LZ4 compression will be disabled")
endif()

# ---- Zstd (high-ratio XISF compression) ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix zstd
        OUTPUT_VARIABLE ZSTD_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    if(ZSTD_PREFIX AND EXISTS "${ZSTD_PREFIX}/include/zstd.h")
        set(ZSTD_FOUND TRUE)
        set(ZSTD_INCLUDE_DIRS "${ZSTD_PREFIX}/include")
        set(ZSTD_LIBRARIES "${ZSTD_PREFIX}/lib/libzstd.dylib")
        message(STATUS "Using Homebrew Zstd from: ${ZSTD_PREFIX}")
    endif()
else()
    set(ZSTD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/zstd")
    if(EXISTS "${ZSTD_DIR}/include/zstd.h")
        message(STATUS "Using local Zstd from ${ZSTD_DIR}")
        set(ZSTD_FOUND TRUE)
        set(ZSTD_INCLUDE_DIRS "${ZSTD_DIR}/include")
        if(EXISTS "${ZSTD_DIR}/static/libzstd_static.lib")
            set(ZSTD_LIBRARIES "${ZSTD_DIR}/static/libzstd_static.lib")
        else()
            set(ZSTD_FOUND FALSE)
            message(STATUS "Zstd static library not found in ${ZSTD_DIR}/static")
        endif()
    else()
        set(ZSTD_FOUND FALSE)
    endif()
endif()

if(NOT ZSTD_FOUND)
    message(STATUS "Zstd not found - XISF Zstd compression will be disabled")
endif()

# ---- LibRaw (camera RAW image support) ----
if(APPLE)
    execute_process(
        COMMAND brew --prefix libraw
        OUTPUT_VARIABLE LIBRAW_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET
    )

    # If brew --prefix did not return a valid path, search the Cellar directly.
    if(NOT (LIBRAW_PREFIX AND EXISTS "${LIBRAW_PREFIX}"))
        file(GLOB LIBRAW_CELLAR_PATHS "/opt/homebrew/Cellar/libraw/*")
        if(LIBRAW_CELLAR_PATHS)
            list(GET LIBRAW_CELLAR_PATHS 0 LIBRAW_PREFIX)
        else()
            # Fallback for Intel Homebrew installations.
            file(GLOB LIBRAW_CELLAR_PATHS "/usr/local/Cellar/libraw/*")
            if(LIBRAW_CELLAR_PATHS)
                list(GET LIBRAW_CELLAR_PATHS 0 LIBRAW_PREFIX)
            endif()
        endif()
    endif()

    if(LIBRAW_PREFIX AND EXISTS "${LIBRAW_PREFIX}")
        set(LIBRAW_FOUND TRUE)
        set(LIBRAW_INCLUDE_DIRS "${LIBRAW_PREFIX}/include")

        find_library(LIBRAW_DYLIB NAMES libraw
            PATHS "${LIBRAW_PREFIX}/lib"
            NO_DEFAULT_PATH
        )
        if(LIBRAW_DYLIB)
            set(LIBRAW_LIBRARIES "${LIBRAW_DYLIB}")
        else()
            # Let the linker resolve it by short name as a last resort.
            set(LIBRAW_LIBRARIES raw)
        endif()

        message(STATUS "Using Homebrew LibRaw from: ${LIBRAW_PREFIX}")
        message(STATUS "  Include: ${LIBRAW_INCLUDE_DIRS}")
        message(STATUS "  Library: ${LIBRAW_LIBRARIES}")
    endif()
else()
    # Windows: check for local deps/ copy or source build.
    set(LIBRAW_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/libraw")

    if(EXISTS "${LIBRAW_DIR}/CMakeLists.txt")
        message(STATUS "Building local LibRaw from source")
        add_subdirectory(deps/libraw)
        set(LIBRAW_FOUND TRUE)
        set(LIBRAW_LIBRARIES libraw)
        set(LIBRAW_INCLUDE_DIRS "${LIBRAW_DIR}")
    elseif(EXISTS "${LIBRAW_DIR}/libraw/libraw.h")
        set(LIBRAW_FOUND TRUE)
        set(LIBRAW_INCLUDE_DIRS "${LIBRAW_DIR}")
        if(WIN32)
            if(EXISTS "${LIBRAW_DIR}/lib/libraw.lib")
                set(LIBRAW_LIBRARIES "${LIBRAW_DIR}/lib/libraw.lib")
            else()
                set(LIBRAW_LIBRARIES "${LIBRAW_DIR}/lib/libraw_static.lib")
            endif()
        else()
            set(LIBRAW_LIBRARIES raw)
        endif()
        message(STATUS "Using local LibRaw from ${LIBRAW_DIR}")
    endif()
endif()

# Ensure AutoMoc predefs remain disabled on Windows after dependency
# detection (some find_package calls may reset the cache variable).
if(WIN32)
    set(CMAKE_AUTOMOC_COMPILER_PREDEFS OFF)
endif()

# =============================================================================
# Section 8 - Source File List
# =============================================================================
# Sources are grouped by subsystem for readability.  Headers are listed
# alongside their corresponding implementation files so that Qt's AutoMoc
# can discover Q_OBJECT macros.
# =============================================================================

set(TSTAR_SOURCES
    # -- Application entry point & top-level classes --
    src/main.cpp
    src/MainWindow.cpp
    src/MainWindow.h
    src/ImageViewer.cpp
    src/ImageViewer.h
    src/ImageBuffer.cpp
    src/ImageBuffer.h
    src/ImageBufferDelta.cpp
    src/ImageBufferDelta.h
    src/MainWindowCallbacks.h
    src/Icons.h
    src/resources.qrc

    # -- Core infrastructure --
    src/core/RobustStatistics.cpp
    src/core/RobustStatistics.h
    src/core/ThreadState.cpp
    src/core/ThreadState.h
    src/core/Task.cpp
    src/core/Task.h
    src/core/TaskManager.cpp
    src/core/TaskManager.h
    src/core/MaskManager.h
    src/core/MaskLayer.h
    src/core/Logger.cpp
    src/core/Logger.h
    src/core/DpiHelper.h
    src/core/ErrorHandling.cpp
    src/core/ErrorHandling.h
    src/core/ResourceManager.cpp
    src/core/ResourceManager.h
    src/core/TStarApplication.cpp
    src/core/TStarApplication.h
    src/core/GlobalExceptionHandler.cpp
    src/core/GlobalExceptionHandler.h
    src/core/SwapManager.cpp
    src/core/SwapManager.h
    src/core/SimdOps.cpp
    src/core/SimdOps.h
    src/core/ColorProfileManager.cpp
    src/core/ColorProfileManager.h
    ${CMAKE_CURRENT_BINARY_DIR}/generated/Version.cpp

    # -- File I/O --
    src/io/FitsLoader.cpp
    src/io/FitsLoader.h
    src/io/FitsLoaderC.c
    src/io/FitsLoaderC.h
    src/io/FitsLoaderCWrapper.cpp
    src/io/FitsLoaderCWrapper.h
    src/io/IccProfileExtractor.h
    src/io/IccProfileExtractor.cpp
    src/io/SimpleTiffWriter.cpp
    src/io/SimpleTiffReader.cpp
    src/io/SimpleTiffReader.h
    src/io/SimpleTiffWriter.h
    src/io/XISFReader.cpp
    src/io/XISFReader.h
    src/io/XISFWriter.cpp
    src/io/XISFWriter.h
    src/io/CompressionUtils.cpp
    src/io/CompressionUtils.h
    src/io/FitsHeaderUtils.cpp
    src/io/FitsHeaderUtils.h
    src/io/SERFile.cpp
    src/io/SERFile.h
    src/io/RawLoader.cpp
    src/io/RawLoader.h

    # -- Custom widgets --
    src/widgets/HistogramWidget.cpp
    src/widgets/HistogramWidget.h
    src/widgets/CustomMdiSubWindow.cpp
    src/widgets/CustomMdiSubWindow.h
    src/widgets/SplashScreen.cpp
    src/widgets/SplashScreen.h
    src/widgets/SidebarWidget.cpp
    src/widgets/SidebarWidget.h
    src/widgets/RightSidebarWidget.cpp
    src/widgets/RightSidebarWidget.h
    src/widgets/HeaderPanel.cpp
    src/widgets/HeaderPanel.h
    src/widgets/AnnotationOverlay.cpp
    src/widgets/AnnotationOverlay.h
    src/widgets/SimplePlotWidget.cpp
    src/widgets/SimplePlotWidget.h
    src/widgets/ResourceMonitorWidget.cpp
    src/widgets/ResourceMonitorWidget.h

    # -- Processing algorithms --
    src/algos/AbeMath.cpp
    src/algos/AbeMath.h
    src/algos/GHSAlgo.cpp
    src/algos/GHSAlgo.h
    src/algos/ChannelOps.cpp
    src/algos/ChannelOps.h
    src/algos/CubicSpline.h
    src/algos/GraXpertRunner.cpp
    src/algos/GraXpertRunner.h
    src/algos/CosmicClarityRunner.cpp
    src/algos/CosmicClarityRunner.h
    src/algos/StarNetRunner.cpp
    src/algos/StarNetRunner.h
    src/algos/RARRunner.cpp
    src/algos/RARRunner.h
    src/algos/StarStretchRunner.cpp
    src/algos/StarStretchRunner.h
    src/algos/StarRecompositionRunner.cpp
    src/algos/StarRecompositionRunner.h
    src/algos/ImageBlendingRunner.cpp
    src/algos/ImageBlendingRunner.h
    src/algos/PerfectPaletteRunner.cpp
    src/algos/PerfectPaletteRunner.h
    src/algos/StatisticalStretch.cpp
    src/algos/StatisticalStretch.h
    src/algos/RawEditorProcessor.cpp
    src/algos/RawEditorProcessor.h
    src/algos/SPCC.cpp
    src/algos/SPCC.h

    # -- Background extraction --
    src/background/BackgroundExtraction.cpp
    src/background/BackgroundExtraction.h
    src/background/CatalogGradientExtractor.cpp
    src/background/CatalogGradientExtractor.h

    # -- Stacking pipeline --
    src/stacking/StackingProject.cpp
    src/stacking/StackingProject.h
    src/stacking/SequenceFile.cpp
    src/stacking/SequenceFile.h
    src/stacking/StackingTypes.h
    src/stacking/StackingEngine.cpp
    src/stacking/StackingEngine.h
    src/stacking/StackingSequence.cpp
    src/stacking/StackingSequence.h
    src/stacking/Registration.cpp
    src/stacking/Registration.h
    src/stacking/RejectionAlgorithms.cpp
    src/stacking/RejectionAlgorithms.h
    src/stacking/RejectionMaps.cpp
    src/stacking/RejectionMaps.h
    src/stacking/Normalization.cpp
    src/stacking/Normalization.h
    src/stacking/OverlapNormalization.cpp
    src/stacking/OverlapNormalization.h
    src/stacking/AnscombeTransform.h
    src/stacking/Statistics.cpp
    src/stacking/Statistics.h
    src/stacking/Weighting.cpp
    src/stacking/Weighting.h
    src/stacking/Blending.cpp
    src/stacking/Blending.h
    src/stacking/DrizzleStacking.cpp
    src/stacking/DrizzleStacking.h
    src/stacking/ImageCache.cpp
    src/stacking/ImageCache.h
    src/stacking/PixelMath.cpp
    src/stacking/PixelMath.h
    src/stacking/Distortion.cpp
    src/stacking/Distortion.h
    src/stacking/CosmeticCorrection.cpp
    src/stacking/CosmeticCorrection.h

    # -- Network utilities --
    src/network/UpdateChecker.cpp
    src/network/UpdateChecker.h
    src/network/ModelDownloader.cpp
    src/network/ModelDownloader.h
    src/network/AstapDownloader.cpp
    src/network/AstapDownloader.h

    # -- Tool dialogs --
    src/dialogs/UpdateDialog.cpp
    src/dialogs/UpdateDialog.h
    src/dialogs/DialogBase.cpp
    src/dialogs/DialogBase.h
    src/dialogs/StretchDialog.cpp
    src/dialogs/StretchDialog.h
    src/dialogs/ColorProfileDialog.cpp
    src/dialogs/ColorProfileDialog.h
    src/dialogs/CropRotateDialog.cpp
    src/dialogs/CropRotateDialog.h
    src/dialogs/AboutDialog.cpp
    src/dialogs/AboutDialog.h
    src/dialogs/BlinkComparatorDialog.cpp
    src/dialogs/BlinkComparatorDialog.h
    src/dialogs/ABEDialog.cpp
    src/dialogs/ABEDialog.h
    src/dialogs/SCNRDialog.cpp
    src/dialogs/SCNRDialog.h
    src/dialogs/MagentaCorrectionDialog.cpp
    src/dialogs/MagentaCorrectionDialog.h
    src/dialogs/GHSDialog.cpp
    src/dialogs/GHSDialog.h
    src/dialogs/ChannelCombinationDialog.cpp
    src/dialogs/ChannelCombinationDialog.h
    src/dialogs/SettingsDialog.cpp
    src/dialogs/SettingsDialog.h
    src/dialogs/GraXpertDialog.cpp
    src/dialogs/GraXpertDialog.h
    src/dialogs/CosmicClarityDialog.cpp
    src/dialogs/CosmicClarityDialog.h
    src/dialogs/StarNetDialog.cpp
    src/dialogs/StarNetDialog.h
    src/dialogs/RARDialog.cpp
    src/dialogs/RARDialog.h
    src/dialogs/StarStretchDialog.cpp
    src/dialogs/StarStretchDialog.h
    src/dialogs/StarRecompositionDialog.cpp
    src/dialogs/StarRecompositionDialog.h
    src/dialogs/ImageBlendingDialog.cpp
    src/dialogs/ImageBlendingDialog.h
    src/dialogs/AstroSpikeDialog.cpp
    src/dialogs/AstroSpikeDialog.h
    src/dialogs/RawEditorDialog.cpp
    src/dialogs/RawEditorDialog.h
    src/dialogs/PerfectPaletteDialog.cpp
    src/dialogs/PerfectPaletteDialog.h
    src/dialogs/BackgroundNeutralizationDialog.cpp
    src/dialogs/BackgroundNeutralizationDialog.h
    src/dialogs/BinningDialog.cpp
    src/dialogs/BinningDialog.h
    src/dialogs/UpscaleDialog.cpp
    src/dialogs/UpscaleDialog.h
    src/dialogs/PixelMathDialog.cpp
    src/dialogs/PixelMathDialog.h
    src/dialogs/PlateSolvingDialog.cpp
    src/dialogs/PlateSolvingDialog.h
    src/dialogs/PCCDialog.cpp
    src/dialogs/PCCDialog.h
    src/dialogs/PCCDistributionDialog.cpp
    src/dialogs/PCCDistributionDialog.h
    src/dialogs/SPCCDialog.cpp
    src/dialogs/SPCCDialog.h
    src/dialogs/AnnotationToolDialog.cpp
    src/dialogs/AnnotationToolDialog.h
    src/dialogs/CurvesDialog.cpp
    src/dialogs/CurvesDialog.h
    src/dialogs/HeaderViewerDialog.cpp
    src/dialogs/HeaderViewerDialog.h
    src/dialogs/ArcsinhStretchDialog.cpp
    src/dialogs/ArcsinhStretchDialog.h
    src/dialogs/HistogramStretchDialog.cpp
    src/dialogs/HistogramStretchDialog.h
    src/dialogs/WavescaleHDRDialog.cpp
    src/dialogs/WavescaleHDRDialog.h
    src/dialogs/SaturationDialog.cpp
    src/dialogs/SaturationDialog.h
    src/dialogs/StarAnalysisDialog.cpp
    src/dialogs/StarAnalysisDialog.h
    src/dialogs/HeaderEditorDialog.cpp
    src/dialogs/HeaderEditorDialog.h
    src/dialogs/MaskCanvas.cpp
    src/dialogs/MaskCanvas.h
    src/dialogs/MaskGenerationDialog.cpp
    src/dialogs/MaskGenerationDialog.h
    src/dialogs/LivePreviewDialog.cpp
    src/dialogs/LivePreviewDialog.h
    src/dialogs/ApplyMaskDialog.cpp
    src/dialogs/ApplyMaskDialog.h
    src/dialogs/DebayerDialog.cpp
    src/dialogs/DebayerDialog.h
    src/dialogs/ContinuumSubtractionDialog.cpp
    src/dialogs/ContinuumSubtractionDialog.h
    src/dialogs/MultiscaleDecompDialog.cpp
    src/dialogs/MultiscaleDecompDialog.h
    src/dialogs/NarrowbandNormalizationDialog.cpp
    src/dialogs/NarrowbandNormalizationDialog.h
    src/dialogs/NBtoRGBStarsDialog.cpp
    src/dialogs/NBtoRGBStarsDialog.h
    src/dialogs/AlignChannelsDialog.cpp
    src/dialogs/AlignChannelsDialog.h
    src/dialogs/HelpDialog.cpp
    src/dialogs/HelpDialog.h
    src/dialogs/ClaheDialog.cpp
    src/dialogs/ClaheDialog.h
    src/dialogs/StarHaloRemovalDialog.cpp
    src/dialogs/StarHaloRemovalDialog.h
    src/dialogs/MorphologyDialog.cpp
    src/dialogs/MorphologyDialog.h
    src/dialogs/SelectiveColorDialog.cpp
    src/dialogs/SelectiveColorDialog.h
    src/dialogs/TemperatureTintDialog.cpp
    src/dialogs/TemperatureTintDialog.h
    src/dialogs/CorrectionBrushDialog.cpp
    src/dialogs/CorrectionBrushDialog.h
    src/dialogs/ExtractLuminanceDialog.cpp
    src/dialogs/ExtractLuminanceDialog.h
    src/dialogs/RecombineLuminanceDialog.cpp
    src/dialogs/RecombineLuminanceDialog.h
    src/dialogs/AberrationInspectorDialog.cpp
    src/dialogs/AberrationInspectorDialog.h
    src/dialogs/NewProjectDialog.cpp
    src/dialogs/NewProjectDialog.h
    src/dialogs/StackingDialog.cpp
    src/dialogs/StackingDialog.h
    src/dialogs/RegistrationDialog.cpp
    src/dialogs/RegistrationDialog.h
    src/dialogs/PreprocessingDialog.cpp
    src/dialogs/PreprocessingDialog.h
    src/dialogs/ScriptBrowserDialog.cpp
    src/dialogs/ScriptBrowserDialog.h
    src/dialogs/ConversionDialog.cpp
    src/dialogs/ConversionDialog.h
    src/dialogs/CBEDialog.cpp
    src/dialogs/CBEDialog.h
    src/dialogs/ReferenceAlignDialog.cpp
    src/dialogs/ReferenceAlignDialog.h
    src/dialogs/ScriptDialog.cpp
    src/dialogs/ScriptDialog.h

    # -- Astrometry --
    src/astrometry/SimbadSearcher.cpp
    src/astrometry/SimbadSearcher.h
    src/astrometry/AnnotationEngine.cpp
    src/astrometry/AnnotationEngine.h
    src/astrometry/HiPSClient.cpp
    src/astrometry/HiPSClient.h
    src/astrometry/TriangleMatcher.cpp
    src/astrometry/TriangleMatcher.h
    src/astrometry/NativePlateSolver.cpp
    src/astrometry/NativePlateSolver.h
    src/astrometry/AstapSolver.cpp
    src/astrometry/AstapSolver.h
    src/astrometry/WcsSolver.h
    src/astrometry/WCSUtils.cpp
    src/astrometry/WCSUtils.h

    # -- Photometry --
    src/photometry/StarDetector.cpp
    src/photometry/StarDetector.h
    src/photometry/PsfFitter.cpp
    src/photometry/PsfFitter.h
    src/photometry/CatalogClient.cpp
    src/photometry/CatalogClient.h
    src/photometry/PCCCalibrator.cpp
    src/photometry/PCCCalibrator.h
    src/photometry/PCCResult.h
    src/photometry/AperturePhotometry.cpp
    src/photometry/AperturePhotometry.h

    # -- Preprocessing pipeline --
    src/preprocessing/PreprocessingTypes.h
    src/preprocessing/MasterFrames.cpp
    src/preprocessing/MasterFrames.h
    src/preprocessing/Preprocessing.cpp
    src/preprocessing/Preprocessing.h
    src/preprocessing/Debayer.cpp
    src/preprocessing/Debayer.h
    src/preprocessing/XTransDemosaic.cpp
    src/preprocessing/XTransDemosaic.h

    # -- Calibration --
    src/calibration/CalibrationEngine.cpp
    src/calibration/CalibrationC.c
    src/calibration/CalibrationEngine.h

    # -- Scripting engine --
    src/scripting/ScriptTypes.h
    src/scripting/ScriptParser.cpp
    src/scripting/ScriptParser.h
    src/scripting/ScriptRunner.cpp
    src/scripting/ScriptRunner.h
    src/scripting/msvc_compat.cpp
    src/scripting/StackingCommands.cpp
    src/scripting/StackingCommands.h
)

# =============================================================================
# Section 9 - LittleCMS2 (lcms2) Color Management
# =============================================================================
# On macOS the system-installed library is preferred.  On Windows the library
# is compiled from the vendored sources in deps/lcms2/.
# =============================================================================

if(APPLE)
    find_library(LCMS2_LIBRARY NAMES lcms2
        PATHS
            /opt/homebrew/lib
            /usr/local/lib
            /usr/local/opt/little-cms2/lib
    )
    if(LCMS2_LIBRARY)
        message(STATUS "Found lcms2: ${LCMS2_LIBRARY}")
        list(APPEND TSTAR_LIBS ${LCMS2_LIBRARY})
        find_path(LCMS2_INCLUDE_DIR NAMES lcms2.h
            PATHS
                /opt/homebrew/include
                /usr/local/include
                /usr/local/opt/little-cms2/include
        )
    else()
        message(WARNING "lcms2 not found; falling back to vendored sources (not recommended on macOS)")
        file(GLOB LCMS2_SOURCES "deps/lcms2/src/*.c")
        list(APPEND TSTAR_SOURCES ${LCMS2_SOURCES})
    endif()
else()
    # Explicit file list (avoids GLOB so CMake does not force reconfiguration
    # when unrelated files appear in the directory).
    set(LCMS2_SOURCES
        deps/lcms2/src/cmsalpha.c
        deps/lcms2/src/cmscam02.c
        deps/lcms2/src/cmscgats.c
        deps/lcms2/src/cmscnvrt.c
        deps/lcms2/src/cmserr.c
        deps/lcms2/src/cmsgamma.c
        deps/lcms2/src/cmsgmt.c
        deps/lcms2/src/cmshalf.c
        deps/lcms2/src/cmsintrp.c
        deps/lcms2/src/cmsio0.c
        deps/lcms2/src/cmsio1.c
        deps/lcms2/src/cmslut.c
        deps/lcms2/src/cmsmd5.c
        deps/lcms2/src/cmsmtrx.c
        deps/lcms2/src/cmsnamed.c
        deps/lcms2/src/cmsopt.c
        deps/lcms2/src/cmspack.c
        deps/lcms2/src/cmspcs.c
        deps/lcms2/src/cmsplugin.c
        deps/lcms2/src/cmsps2.c
        deps/lcms2/src/cmssamp.c
        deps/lcms2/src/cmssm.c
        deps/lcms2/src/cmstypes.c
        deps/lcms2/src/cmsvirt.c
        deps/lcms2/src/cmswtpnt.c
        deps/lcms2/src/cmsxform.c
    )
    list(APPEND TSTAR_SOURCES ${LCMS2_SOURCES})

    # Suppress pedantic warnings for third-party lcms2 sources.
    if(NOT MSVC)
        set_source_files_properties(${LCMS2_SOURCES}
            PROPERTIES COMPILE_FLAGS "-Wno-pedantic"
        )
    endif()
endif()

# =============================================================================
# Section 10 - Executable Target
# =============================================================================

if(APPLE)
    # --- macOS App Bundle ---
    set(MACOSX_BUNDLE_ICON_FILE TStar.icns)
    set(APP_ICON_MACOS "${CMAKE_CURRENT_SOURCE_DIR}/src/images/TStar.icns")

    if(EXISTS "${APP_ICON_MACOS}")
        set_source_files_properties(${APP_ICON_MACOS}
            PROPERTIES MACOSX_PACKAGE_LOCATION "Resources"
        )
        add_executable(TStar MACOSX_BUNDLE
            src/main.cpp ${TSTAR_SOURCES} ${APP_ICON_MACOS}
        )
    else()
        add_executable(TStar MACOSX_BUNDLE
            src/main.cpp ${TSTAR_SOURCES}
        )
    endif()

    set_target_properties(TStar PROPERTIES
        MACOSX_BUNDLE_BUNDLE_NAME "TStar"
        MACOSX_BUNDLE_BUNDLE_VERSION "${TSTAR_VERSION}"
        MACOSX_BUNDLE_SHORT_VERSION_STRING "${TSTAR_VERSION}"
        MACOSX_BUNDLE_GUI_IDENTIFIER "com.fabiotempera.tstar"
        INSTALL_RPATH "@executable_path/../Frameworks"
        BUILD_WITH_INSTALL_RPATH TRUE
        MACOSX_RPATH TRUE
    )

    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/Info.plist")
        set_target_properties(TStar PROPERTIES
            MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/src/Info.plist"
        )
    endif()
else()
    # --- Windows executable with embedded version resource ---
    add_executable(TStar
        ${CMAKE_CURRENT_BINARY_DIR}/TStar.rc
        ${TSTAR_SOURCES}
    )
endif()

# =============================================================================
# Section 11 - Translations
# =============================================================================

qt_add_translations(TStar
    TS_FILES
        "translations/tstar_it.ts"
        "translations/tstar_es.ts"
        "translations/tstar_fr.ts"
        "translations/tstar_de.ts"
    QM_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/translations"
    RESOURCE "src/i18n.qrc"
)

# =============================================================================
# Section 12 - Include Directories
# =============================================================================

target_include_directories(TStar PRIVATE
    # Project source trees
    src
    src/astrometry
    src/photometry
    src/network
    src/dialogs
    src/widgets
    src/io
    src/algos
    src/stacking
    src/preprocessing
    src/scripting

    # Vendored / external headers
    deps/lcms2/include
    deps/lcms2/src
    ${LCMS2_INCLUDE_DIR}

    # Library headers
    ${GSL_INCLUDE_DIRS}
    ${CFITSIO_INCLUDE_DIR}
    ${OpenCV_INCLUDE_DIRS}
)

# Conditionally add optional dependency include paths and preprocessor flags.
if(LZ4_FOUND)
    target_include_directories(TStar PRIVATE ${LZ4_INCLUDE_DIRS})
    target_compile_definitions(TStar PRIVATE HAVE_LZ4)
endif()

if(ZSTD_FOUND)
    target_include_directories(TStar PRIVATE ${ZSTD_INCLUDE_DIRS})
    target_compile_definitions(TStar PRIVATE HAVE_ZSTD)
endif()

if(LIBRAW_FOUND)
    target_include_directories(TStar PRIVATE ${LIBRAW_INCLUDE_DIRS})
    target_compile_definitions(TStar PRIVATE HAVE_LIBRAW)
endif()

# =============================================================================
# Section 13 - Link Directories
# =============================================================================

target_link_directories(TStar PRIVATE
    ${GSL_LIBRARY_DIRS}
)

if(APPLE)
    # Ensure the linker can find Homebrew-installed libraries.
    if(EXISTS "/opt/homebrew/lib")
        target_link_directories(TStar PRIVATE /opt/homebrew/lib)
    endif()
    if(EXISTS "/usr/local/lib")
        target_link_directories(TStar PRIVATE /usr/local/lib)
    endif()

    if(LIBRAW_FOUND AND LIBRAW_PREFIX)
        target_link_directories(TStar PRIVATE "${LIBRAW_PREFIX}/lib")
    endif()
endif()

# =============================================================================
# Section 14 - Link Libraries
# =============================================================================

if(WIN32)
    set_property(TARGET TStar PROPERTY AUTOMOC_COMPILER_PREDEFS OFF)
endif()

# Core libraries (always linked).
target_link_libraries(TStar PRIVATE
    Qt6::Widgets
    Qt6::Svg
    Qt6::Network
    Qt6::Concurrent
    Qt6::Xml
    ${CFITSIO_LIBRARY}
    ${GSL_LIBRARIES}
    ${OpenCV_LIBS}
    ${TSTAR_LIBS}
)

# OpenMP (imported targets may not exist on all platforms).
if(TARGET OpenMP::OpenMP_CXX)
    target_link_libraries(TStar PRIVATE OpenMP::OpenMP_CXX)
endif()
if(TARGET OpenMP::OpenMP_C)
    target_link_libraries(TStar PRIVATE OpenMP::OpenMP_C)
endif()

# Platform-specific system libraries.
if(APPLE)
    find_package(ZLIB REQUIRED)
    target_link_libraries(TStar PRIVATE ZLIB::ZLIB)
else()
    # Windows: zlib, Winsock, PDH (performance counters), DXGI (GPU info).
    target_link_libraries(TStar PRIVATE z ws2_32 pdh dxguid)
endif()

# Optional compression and RAW libraries.
if(LZ4_FOUND)
    target_link_libraries(TStar PRIVATE ${LZ4_LIBRARIES})
    message(STATUS "LZ4 compression enabled for XISF")
endif()

if(ZSTD_FOUND)
    target_link_libraries(TStar PRIVATE ${ZSTD_LIBRARIES})
    message(STATUS "Zstd compression enabled for XISF")
endif()

if(LIBRAW_FOUND)
    target_link_libraries(TStar PRIVATE ${LIBRAW_LIBRARIES})
    message(STATUS "LibRaw support enabled")
endif()

# =============================================================================
# Section 15 - Post-Build Resource Copy
# =============================================================================
# Copy runtime resources (images, scripts, data files) to the build output
# directory so that the application can locate them during development.
# On macOS the resources are additionally copied into the app bundle.
# =============================================================================

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/src/images"
     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/scripts"
     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/data"
     DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

if(APPLE)
    add_custom_command(TARGET TStar POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_CURRENT_SOURCE_DIR}/src/images"
            "$<TARGET_BUNDLE_DIR:TStar>/Contents/Resources/images"
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_CURRENT_BINARY_DIR}/translations"
            "$<TARGET_BUNDLE_DIR:TStar>/Contents/Resources/translations"
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_CURRENT_SOURCE_DIR}/scripts"
            "$<TARGET_BUNDLE_DIR:TStar>/Contents/Resources/scripts"
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_CURRENT_SOURCE_DIR}/data"
            "$<TARGET_BUNDLE_DIR:TStar>/Contents/Resources/data"
        COMMENT "Copying resources into macOS app bundle"
    )
endif()